# audio

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  build.sh  save_opusfile.c  stream_opusfile.c
.github/: dependabot.yml
examples/: file.rs  internet_radio.rs  opus_file.rs  radio_stream.rs
flak/: Cargo.toml  README.md
lib/opus/: config.h
lib/opusenc/: arch.h  resample.c
ogg_opus/: .gitignore  Cargo.toml
ogg_opus/lib/opus/: analysis.c  build.sh
ogg_opus/lib/opusenc/: build.sh  speex_resampler.h
ogg_opus/src/: ffi.rs  lib.rs  stream_encoder.rs
ogg_opus/src/old/: mod.rs
raw_audio/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO
raw_audio/src/: decoder.rs  encoder.rs  lib.rs  pcm.rs
riff_wav/: Cargo.toml  README.md
riff_wav/src/: chunk.rs  decoder.rs  encoder.rs  lib.rs
riff_wav/src/chunk/: fmt.rs
src/: ffi.rs  lib.rs  stream_encoder.rs
src/old/: ffi.rs  mod.rs
