[package]
name = "opus-no"
version = "0.1.0"
authors = ["Jeron Aldaron Lau <jeronlau@plopgrizzly.com>"]
edition = "2018"

description = "Opus (eventually) no C (pure Rust)."
readme = "README.md"
license = "MIT/BSL-1.0"
keywords = ["opus", "codec", "stream", "sound", "audio"]
categories = ["api-bindings", "encoding", "compression",
	"multimedia::audio", "multimedia::encoding"]
repository = "https://github.com/libcala/opus-no"
documentation = "https://docs.rs/opus-no/"

[dependencies]
lazy_static = "1.3"
libc = "0.2"
dl_api = "0.3"
